# autocorrect

./: .gitignore  .pyarmor-manifest  README.md  main.py  obfs.sh  package.json  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.js
autocorrect_pro/: __init__.py  config.py  gui.py  main.py  models.py  routes.py  setup.py  utils.py
autocorrect_pro/static/css/: glass-dark.css  glass-light.css  pastel.css  styles.css  tailwind.css  wizzard.css
autocorrect_pro/static/js/: base.js  edit_order.js  index.js  settings.js  whatsnew.js  wizzard.js
autocorrect_pro/templates/: 500.html  base.html  base_no_header.html  custom_mode.html  edit_order.html  header.html  index.html  settings.html  whatsnew.html  wizzard.html
tests/: test_config.py  test_endpoint_style.py  test_models.py  test_utils.py
